# PlantMap3D-ROS

./: .gitignore  Dockerfile  README.md  requirements.txt
.github/workflows/: blank.yml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/nmea_navsat_driver/: test_driver.py
devel/lib/pkgconfig/: biomass_estimator_driver.pc  biomass_map_driver.pc  gps_module_driver.pc  image_segmentation_driver.pc  nmea_navsat_driver.pc  oakd_camera_driver.pc
devel/lib/python3/dist-packages/libnmea_navsat_driver/: __init__.py
devel/share/biomass_estimator_driver/cmake/: biomass_estimator_driverConfig.cmake
devel/share/biomass_map_driver/cmake/: biomass_map_driverConfig.cmake
devel/share/gps_module_driver/cmake/: gps_module_driverConfig.cmake
devel/share/image_segmentation_driver/cmake/: image_segmentation_driverConfig.cmake
devel/share/nmea_navsat_driver/cmake/: nmea_navsat_driverConfig.cmake
devel/share/oakd_camera_driver/cmake/: oakd_camera_driverConfig.cmake
src/: README.md
src/biomass_estimator_driver/: CMakeLists.txt  package.xml
src/biomass_estimator_driver/scripts/: biomass_estimator.py  biomass_estimator_wrapper.py
src/biomass_estimator_driver/scripts/tests/: test_biomass_estimator.py
src/biomass_estimator_driver/test/: test_biomass_estimator.py
src/biomass_map_driver/: CMakeLists.txt  README.md  package.xml
src/biomass_map_driver/scripts/: analysis_plantmap_2023-04-20.csv  biomass_data_2023-4-28.csv  biomass_map.py  biomass_map_wrapper.py  biomass_saver_client.py  csv_file_read.py  mapInterpolator.py  map_visualization.py  multicamera_csv_output.py
src/biomass_map_driver/scripts/tests/: test_biomass_map.py
src/biomass_map_driver/srv/: PM3DBiomassDataSaver.srv
src/biomass_map_driver/test/: test_biomass_map.py
src/camera_location_module/: CMakeLists.txt  package.xml
src/camera_location_module/scripts/: camera_location.py  client_camera_location.py  server_camera_location.py
src/camera_location_module/scripts/tests/: test_camera_location.py  test_config.yaml
src/camera_location_module/srv/: PM3DCameraLocation.srv
src/camera_location_module/test/: test_camera_location.py
src/camera_trigger_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/camera_trigger_driver/include/geotoutm/: computeGPSDistance.cpp  computeGPSDistance.h
src/camera_trigger_driver/launch/: gps_trigger.launch  true_gps_trigger.launch
src/camera_trigger_driver/msg/: PM3DGPSData.msg
src/camera_trigger_driver/scripts/: gps_heading_interpreter.py  gps_heading_server.py  gps_log_parser.py  server_gps_heading.py  test_gps_publisher.py
src/camera_trigger_driver/src/: camera_trigger_node.cpp
src/camera_trigger_driver/srv/: PM3DGPSHeading.srv
src/camera_trigger_driver/test/: test_camera_trigger_node.cpp
src/camera_trigger_driver/tests/: gps_heading_test.py
src/configs/: CMakeLists.txt  package.xml
src/configs/config/: cam_location.yaml  image_config.yaml  species_list.json
src/data_saver_driver/: CMakeLists.txt  package.xml
src/data_saver_driver/biomass_estimation/biomass_save_summary/: README.md
src/data_saver_driver/scripts/: data_saver.py
src/data_saver_module/: CMakeLists.txt  package.xml
src/data_saver_module/scripts/: data_saver.py
src/firmware_api/: CMakeLists.txt  package.xml
src/firmware_api/params/: in_states.txt  out_states.txt  pins.txt  states.txt
src/firmware_api/scripts/: jetson_gpio_api.py  jetson_gpio_sim.py
src/flask_app_driver/: CMakeLists.txt  package.xml
src/flask_app_driver/launch/: flask_app_start.launch
src/flask_app_driver/scripts/: app.py
src/flask_app_driver/scripts/common/: camera_data_loader.py  camera_queuemaker.py  check_camera.py  device_maker.py  get_queue.py  image_collector.py  map_visualization.py
src/flask_app_driver/scripts/resources/: biomap.py  cameras.py  debug.py  preview.py  segmentation.py  status.py
src/gps_module_driver/: CMakeLists.txt  package.xml
src/gps_module_driver/launch/: nmea_serial_driver.launch
src/gps_module_driver/scripts/: gps_publisher.py  nmea_serial_driver
src/gps_module_driver/src/libnmea_navsat_driver/nodes/: nmea_topic_serial_reader.py
src/height_map_driver/: CMakeLists.txt  package.xml
src/height_map_driver/scipts/: height_map.py
src/height_map_driver/scipts/tests/: test_height_map.py
src/height_map_driver/scripts/: height_map.py  height_map_wrapper.py
src/height_map_driver/test/: test_height_map.py
src/height_sensor_driver/: CMakeLists.txt  package.xml
src/height_sensor_driver/scripts/: height_sensor_driver.py
src/image_interpolation_driver/: CMakeLists.txt  package.xml
src/image_interpolation_driver/scripts/: mapInterpolator.py
src/image_segmentation_driver/: CMakeLists.txt  package.xml
src/oakd_camera_driver/: CMakeLists.txt  package.xml
src/oakd_camera_driver/launch/: integration_oakd_bio.launch  oakd_camera_driver.test  oakd_stream_integration.launch  run_oakd.launch
src/oakd_camera_driver/msg/: PM3DCameraData.msg
src/oakd_camera_driver/scripts/: check_camera.py  dummy_image_publisher_wrapper.py  gps_publisher.py  image_publisher.py  image_subscriber.py  lone_oak.py  nn_iso.py  oak_collection.py  oakd_camera_nn_test.py  oakd_camera_wrapper.py  oakd_camera_wrapper_nn.py  oakd_capture_data.py  oakd_capture_rgb.py  oakd_image_interpreter.py  oakd_image_saver.py  setup.py  test.py  test_image_yaml.py
src/oakd_camera_driver/scripts/models/: smaller.blob
src/oakd_camera_driver/test/: test_oakd_publisher.py  test_set.yaml
src/oakd_camera_driver/test/depth/: depth.npy
src/oakd_camera_driver/test/segmentation/: seg.npy
src/oakd_camera_driver/tests/: oakd_publisher_test.py  test-image_publisher.py  test_image_publisher.py
src/pm3d_system_config/: CMakeLists.txt  package.xml
src/pm3d_system_config/launch/: oakd_system_start.launch  shutdown_test.launch  system_start.launch
src/pm3d_system_config/scripts/: sys_nodes_shutdown.py
src/tools/: data_saver.py
src/utils/: CMakeLists.txt  package.xml
