<?xml version="1.0"?>
<package format="2">
  <name>oakd_camera_driver</name>
  <version>0.0.0</version>
  <description>The oakd_camera_driver package</description>


 <maintainer email="asmathew@ncsu.edu">Aaron Mathew</maintainer>


 <license>TODO</license>

 <author email="asmathew@ncsu.edu">Aaron Mathew</author> 

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
